[project]
name = "guardrails-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.26",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "langgraph-cli[inmem]>=0.3.5",
    "langsmith>=0.4.8",
    "guardrails-ai>=0.5.13",
    "langchain-community>=0.3.26",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
